--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body><%= render "shared/navbar" %>
 <%= render "shared/flashes" %>
-
+<%= render "shared/bottom_navbar" %>
     <%= yield %>
+
   </body>
 </html>
