--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -22,10 +22,9 @@
 
   <!-- Card display area -->
   <div class="row">
-  <% 15.times do %>
+  <% 15.times do |i| %>
     <div class="col-6 col-md-4 mb-4">
       <div class="card" style="height: 100%; display: flex; flex-direction: column;">
-
         <!-- Image Section -->
         <div class="card-image" style="flex-shrink: 0;">
           <img src="sandwich_image.jpg" alt="Sandwich" class="card-img-top" style="width: 100%; height: 200px; object-fit: cover;">
@@ -33,12 +32,19 @@
 
         <!-- Content Section -->
         <div class="card-body" style="flex-grow: 1;">
-          <h5 class="card-title">Sandwich Name</h5>
+          <h5 class="card-title">Sandwich <%= i + 1 %></h5>
           <p class="card-text">Description of your totally awesome, original sandwich.</p>
+
+          <!-- Favorite Button -->
+          <button
+  class="btn favorite-button">
+  <i class="fa-regular fa-heart"></i>
+</button>
         </div>
       </div>
     </div>
   <% end %>
+  </div>
 </div>
 
 <!-- Bottom navigation bar -->
