--- a/app/assets/stylesheets/pages/_sandwiches.scss
+++ b/app/assets/stylesheets/pages/_sandwiches.scss
@@ -29,7 +29,7 @@
 .category-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   gap: 10px;
   text-align: center;
 }
@@ -41,6 +41,9 @@
   text-align: center;
   font-size: 1rem;
   font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .category:last-child {
@@ -58,4 +61,12 @@
   padding: 0 10px;
   font-size: 1rem;
   line-height: 1.5;
+}
+
+.p-3.mb-3 + .empty-card {
+  margin-top: 45px;
+}
+
+.notes-header {
+  text-align: center;
 }
