--- a/app/views/landing/home.html.erb
+++ b/app/views/landing/home.html.erb
@@ -1,2 +1,7 @@
-<div class="landing-page">
+<div class="landing-container">
+  <div class="image-container">
+    <a href="/sandwiches">
+      <img src="<%= asset_path('landing-button.png') %>" alt="Landing Button" class="landing-image">
+    </a>
+  </div>
 </div>
