--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,6 @@
 @import "pages/index";
 
 @import "pages/sandwiches_index";
-@import "pages/favorites"
+@import "pages/favorites";
+
+@import "pages/sandwiches_new";
