--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -27,7 +27,7 @@
         <div class="card" style="height: 100%; display: flex; flex-direction: column;">
           <!-- Image Section -->
           <div class="card-image" style="flex-shrink: 0;">
-            <img src="<%= sandwich.image_url %>" alt="<%= sandwich.name %>" class="card-img-top" style="width: 100%; height: 200px; object-fit: cover;">
+            <img src="sandwich.image_url" alt="<%= sandwich.name %>" class="card-img-top" style="width: 100%; height: 200px; object-fit: cover;">
           </div>
 
           <!-- Content Section -->
