the show link works

--- a/app/assets/stylesheets/pages/_sandwiches_index.scss
+++ b/app/assets/stylesheets/pages/_sandwiches_index.scss
@@ -13,3 +13,13 @@ body {
  .form-control {
   background-color: white;
  }
+
+ .card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card-link:hover {
+  text-decoration: none;
+  color: inherit;
+}
