--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -1,4 +1,17 @@
 <div data-controller="search" class="container">
+<!-- Search Bar-->
+<div class="search-bar">
+        <i class="search-icon fa-solid fa-magnifying-glass"></i>
+        <%= simple_form_for :search, url: sandwiches_path, method: :get, html: { class: "d-flex", data: { search_target: "form"} } do |f| %>
+          <%= f.input :query,
+                      input_html: {
+                        placeholder: "Search for Sandwiches",
+                        data: { action: "keyup->search#fire",
+                        search_target: "input" }
+                      },
+                      label: false %>
+        <% end %>
+      </div>
 
 
   <!-- Search box -->
@@ -23,31 +36,13 @@
     </div>
   </div>
 
-  <!-- Card display area -->
+  <div id="search-results" data-search-target="results">
+    <!-- Dynamic search results will be injected here -->
+  </div>
+
+  <!-- Initial Sandwich Cards (renders all sandwiches if no search) -->
   <div class="row">
-    <% @sandwiches.each do |sandwich| %>
-      <div class="col-6 col-md-4 mb-4">
-        <%= link_to sandwich_path(sandwich), class: 'card-link' do %>
-          <div class="card" style="height: 100%; display: flex; flex-direction: column;">
-            <!-- Image Section -->
-            <div class="card-image" style="flex-shrink: 0;">
-              <img src="sandwich.image_url" alt="<%= sandwich.name %>" class="card-img-top" style="width: 100%; height: 200px; object-fit: cover;">
-            </div>
-
-            <!-- Content Section -->
-            <div class="card-body" style="flex-grow: 1;">
-              <h5 class="card-title"><%= sandwich.name %></h5>
-              <p class="card-text"><%= sandwich.description %></p>
-
-              <!-- Favorite Button -->
-              <%= link_to toggle_favorite_sandwich_path(sandwich), data: { turbo_method: :post } do %>
-                <%= render 'sandwiches/like_button', sandwich: sandwich %>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
+    <%= render 'sandwiches/sandwich_cards', sandwiches: @sandwiches %>
   </div>
 </div>
 <%# toggle_favorite_sandwich_path %>
