--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -12,7 +12,7 @@
         <input type="text" class="form-control" placeholder="Search for sandwiches" />
 
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button">
+          <button class="btn btn-outline-secondary" type="button" data-action="click->filter-toggle#toggle">
             <i class="fas fa-bars"></i>
           </button>
         </div>
@@ -21,9 +21,9 @@
   </div>
 
   <!-- Card display area -->
-  <div class="row">
+  <div class="row" data-controller="filter-toggle" data-filter-toggle-favorite-ids="<%= current_user.all_favorited.map(&:id).join(',') %>">
     <% @sandwiches.each do |sandwich| %>
-      <div class="col-6 col-md-4 mb-4">
+      <div class="col-6 col-md-4 mb-4" data-sandwich-id="<%= sandwich.id %>">
         <div class="card" style="height: 100%; display: flex; flex-direction: column;">
           <!-- Image Section -->
           <div class="card-image" style="flex-shrink: 0;">
@@ -45,4 +45,3 @@
     <% end %>
   </div>
 </div>
-toggle_favorite_sandwich_path
