--- a/app/views/sandwiches/_sandwich_cards.html.erb
+++ b/app/views/sandwiches/_sandwich_cards.html.erb
@@ -1,11 +1,12 @@
 <% @sandwiches.each do |sandwich| %>
-  <div class="col-6 col-md-4 mb-4">
+  <div class="col-6 col-md-4 mb-4" data-sandwich-id="<%= sandwich.id %>">
     <%= link_to sandwich_path(sandwich), class: 'card-link' do %>
-      <div class="card" style="height: 100%; display: flex; flex-direction: column;">
+    <div class="card" style="height: 100%; display: flex; flex-direction: column;" data-favorite-toggle-target="unliked" data-id="<%= sandwich.id %>">
 
 
         <!-- Content Section -->
         <div class="card-body" style="flex-grow: 1;">
+          <%= image_tag 'burger.jpg', alt: 'Burger Image', class: 'img-fluid sandwich-image' %>
           <h5 class="card-title"><%= sandwich.name %></h5>
           <p class="card-text"><%= sandwich.description %></p>
 
