--- a/app/views/sandwiches/index.html.erb
+++ b/app/views/sandwiches/index.html.erb
@@ -28,9 +28,15 @@
         <input type="text" class="form-control" placeholder="Search for sandwiches" />
 
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button" data-action="click->favorite-toggle#fire" data-turbo="false">
+          <button class="btn btn-outline-secondary" type="button"  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-turbo="false">
             <i class="fas fa-bars"></i>
           </button>
+                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <button class="btn btn-outline-secondary dropdown-item" type="button" data-action="click->favorite-toggle#fire" data-turbo="false">
+                      favorites
+                  </button>
+                  </div>
+
         </div>
       </div>
     </div>
