--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -19,26 +19,31 @@
       <%= f.input :name, label: "Sandwich Name", input_html: { class: 'form-control' } %>
     </div>
 
-    <div class="mb-3">
+    <div class="mb-3 ingredient-container mb-2">
       <h3>Select Ingredients:</h3>
-      <% @visible_ingredients.each do |ingredient| %>
-        <div class="ingredient-container mb-2">
-          <% if ingredient.image_url.present? %>
-            <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
-          <% end %>
+      <!-- Sortable Ingredient List -->
+      <ul data-controller="sortable">
+        <% @visible_ingredients.each_with_index do |ingredient, index| %>
+          <li>
+            <% if ingredient.image_url.present? %>
+              <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
+            <% end %>
 
-          <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
-            <%= check_box_tag "sandwich[ingredient_ids][]", ingredient.id,
-            @sandwich.ingredient_ids.include?(ingredient.id), id: "ingredient_#{ingredient.id}", class: 'form-check-input' %>
-            <span class="ingredient-name"><%= ingredient.name %></span>
-            <div>
-              <%= number_field_tag "sandwich[ingredient_quantities][#{ingredient.id}]", 1, min: 1, class: 'quantity-input', size: 2 %>
-              <span class="ingredient-unit"><%= ingredient.unit_of_measure %></span>
-            </div>
-          <% end %>
-        </div>
-      <% end %>
+            <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
+              <%= check_box_tag "sandwich[ingredient_ids][]", ingredient.id,
+                @sandwich.ingredient_ids.include?(ingredient.id),
+                id: "ingredient_#{ingredient.id}", class: 'form-check-input' %>
+              <span class="ingredient-name"><%= ingredient.name %></span>
+              <div>
+                <%= number_field_tag "sandwich[ingredient_quantities][#{ingredient.id}]", 1, min: 1, class: 'quantity-input', size: 2 %>
+                <span class="ingredient-unit"><%= ingredient.unit_of_measure %></span>
+              </div>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div>
+
 
     <div class="mb-3">
       <h3>Upload a Sandwich Photo:</h3>
