--- a/app/views/sandwiches/show.html.erb
+++ b/app/views/sandwiches/show.html.erb
@@ -55,11 +55,21 @@
 </div>
 
 <div class="card p-3 mb-3 sandwich-card ingredients-card">
-  <h2>Ingredients:</h2>
   <div class="ingredients-container">
     <% @sandwich.ingredients.each do |ingredient| %>
       <div class="ingredient-item">
-        <strong><%= "#{ingredient.name} - #{ingredient.unit_of_measure}" %></strong>
+        <div class="ingredient-image">
+          <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
+        </div>
+        <div class="ingredient-details">
+          <div class="ingredient-name">
+            <%= ingredient.name %>
+          </div>
+          <div class="ingredient-divider"></div>
+          <span class="ingredient-unit">
+            <%= ingredient.unit_of_measure %>
+          </span>
+        </div>
       </div>
     <% end %>
   </div>
