--- a/app/assets/stylesheets/pages/_sandwiches.scss
+++ b/app/assets/stylesheets/pages/_sandwiches.scss
@@ -218,7 +218,7 @@
   width: 100%;
   max-width: 400px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  margin: 10px 15px;
+  margin: 10px auto;
 }
 
 .sandwich-card.ingredients-card h2 {
