--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -44,6 +44,9 @@
       </ul>
     </div>
 
+    <div class="mb-3">
+      <%= f.input :description, as: :text, label: "Sandwich Description", input_html: { class: 'form-control', rows: 4 } %>
+    </div>
 
     <div class="mb-3">
       <h3>Upload a Sandwich Photo:</h3>
