--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -45,7 +45,7 @@
     </div>
 
     <div class="mb-3">
-      <%= f.input :description, as: :text, label: "Sandwich Description", input_html: { class: 'form-control', rows: 4 } %>
+      <%= f.input :description, as: :text, label: "Sandwich Description:", input_html: { class: 'form-control', rows: 4 } %>
     </div>
 
     <div class="mb-3">
@@ -58,3 +58,5 @@
     </div>
   <% end %>
 </div>
+
+<div class="p-3 mb-3 empty-card-create"></div>
