saving to be safe

--- a/app/views/sandwiches/_like_button.html.erb
+++ b/app/views/sandwiches/_like_button.html.erb
@@ -1,3 +1,3 @@
 <div class="like-icon mx-2 <%= 'text-danger' if current_user.favorited?(sandwich) %>" data-id="<%= sandwich.id %>">
-  <i class="fas fa-heart"></i>
+  <i class="fa-regular fa-heart"></i>
 </div>
