--- a/app/views/sandwiches/_sandwich_cards.html.erb
+++ b/app/views/sandwiches/_sandwich_cards.html.erb
@@ -1,21 +1,18 @@
 <% @sandwiches.each do |sandwich| %>
-  <div class="col-6 col-md-4 mb-4" data-sandwich-id="<%= sandwich.id %>">
-    <%= link_to sandwich_path(sandwich), class: 'card-link' do %>
-    <div class="card" style="height: 100%; display: flex; flex-direction: column;" data-favorite-toggle-target="unliked" data-id="<%= sandwich.id %>">
+  <div class="col-12 mb-3">
+  <div class="sandwich-card" data-sandwich-id="<%= sandwich.id %>" data-favorite-toggle-target="unliked"  data-id="<%= sandwich.id %>">
+    <%= image_tag 'burger.jpg', alt: 'Burger Image', class: 'sandwich-image' %>
 
-
-        <!-- Content Section -->
-        <div class="card-body" style="flex-grow: 1;">
-          <%= image_tag 'burger.jpg', alt: 'Burger Image', class: 'img-fluid sandwich-image' %>
-          <h5 class="card-title"><%= sandwich.name %></h5>
-          <p class="card-text"><%= sandwich.description %></p>
-
-          <!-- Favorite Button -->
-          <%= link_to toggle_favorite_sandwich_path(sandwich), data: { turbo_method: :post } do %>
-            <%= render 'sandwiches/like_button', sandwich: sandwich %>
-          <% end %>
-        </div>
+    <div class="sandwich-content">
+      <div class="sandwich-text">
+        <h5 class="card-title"><%= sandwich.name %></h5>
+        <p class="card-text"><%= sandwich.description %></p>
       </div>
-    <% end %>
+
+      <%= link_to toggle_favorite_sandwich_path(sandwich), data: { turbo_method: :post }, class: 'favorite-button' do %>
+        <%= render 'sandwiches/like_button', sandwich: sandwich %>
+      <% end %>
+    </div>
   </div>
+</div>
 <% end %>
