--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,5 @@
 @import "pages/sandwiches_index";
 @import "pages/favorites";
 @import "pages/sandwiches_new";
-@import "pages/landing"
+@import "pages/landing";
+@import "pages/bottom_footer"
