--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -1,37 +1,31 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
+<nav class="navbar fixed-bottom custom-footer">
   <div class="container">
-    <!-- Use d-flex to arrange buttons horizontally -->
     <ul class="navbar-nav w-100 d-flex flex-row justify-content-between">
       <li class="nav-item w-20 text-center">
-        <a class="nav-link btn btn-light w-100" href="#">
-          <i class="fas fa-home"></i><br />
-          Home
-        </a>
+        <%= link_to sandwiches_path, class: "nav-link btn home-btn" do %>
+          <i class="fas fa-home"></i>
+        <% end %>
       </li>
       <li class="nav-item w-20 text-center">
-        <a class="nav-link btn btn-light w-100" href="#">
-          <i class="fas fa-book"></i><br />
-          Recipe
+        <a class="nav-link btn recipe-btn" href="#">
+          <i class="fas fa-book"></i>
         </a>
       </li>
 
-      <!-- Circular button in the middle -->
       <li class="nav-item w-20 text-center">
-        <%= link_to new_sandwich_path, class: "nav-link btn btn-primary rounded-circle w-75" do %>
+        <%= link_to new_sandwich_path, class: "nav-link btn create-sandwich-btn" do %>
           <i class="fas fa-plus"></i>
         <% end %>
       </li>
 
       <li class="nav-item w-20 text-center">
-        <a class="nav-link btn btn-light w-100" href="#">
-          <i class="fas fa-question-circle"></i><br />
-          Help
+        <a class="nav-link btn help-btn" href="#">
+          <i class="fas fa-question-circle"></i>
         </a>
       </li>
       <li class="nav-item w-20 text-center">
-        <a class="nav-link btn btn-light w-100" href="#">
-          <i class="fas fa-user"></i><br />
-          Profile
+        <a class="nav-link btn profile-btn" href="#">
+          <i class="fas fa-user"></i>
         </a>
       </li>
     </ul>
