--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,7 @@
 .alert {
   position: fixed;
-  bottom: 16px;
+  bottom: 90px;
   right: 16px;
-  z-index: 1000;
+  z-index: 1100;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
