--- a/app/views/sandwiches/new.html.erb
+++ b/app/views/sandwiches/new.html.erb
@@ -19,12 +19,12 @@
       <%= f.input :name, label: "Sandwich Name", input_html: { class: 'form-control' } %>
     </div>
 
-    <div class="mb-3 ingredient-container mb-2">
+    <div data-controller="ingredients" class="mb-3 ingredient-container mb-2">
       <h3>Select Ingredients:</h3>
       <!-- Sortable Ingredient List -->
-      <ul data-controller="sortable">
+      <ul data-controller="sortable" data-ingredients-target="container">
         <% @visible_ingredients.each_with_index do |ingredient, index| %>
-          <li>
+          <li data-ingredients-target="listItem">
             <% if ingredient.image_url.present? %>
               <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
             <% end %>
@@ -39,10 +39,38 @@
                 <span class="ingredient-unit"><%= ingredient.unit_of_measure %></span>
               </div>
             <% end %>
+            <button data-action="click->ingredients#remove" data-ingredients-target="remove">Remove</button>
           </li>
         <% end %>
       </ul>
+      <%= form_with do |f| %>
+        <%= f.collection_select(:ingredient_id, @ingredients, :id, :name,{}, {data: {ingredients_target: "select"}}) %>
+        <%= f.submit "add", data: { action: "click->ingredients#add" } %>
+      <% end %>
+
+      <% @ingredients.each do |ingredient| %>
+      <template id="ingredient-template-<%= ingredient.id %>">
+        <li data-ingredients-target="listItem">
+          <% if ingredient.image_url.present? %>
+            <%= image_tag(Cloudinary::Utils.cloudinary_url(ingredient.image_url), alt: ingredient.name, width: "100", height: "100") %>
+          <% end %>
+
+          <%= label_tag "ingredient_#{ingredient.id}", class: "ingredient-label" do %>
+            <%= check_box_tag "sandwich[ingredient_ids][]", ingredient.id,
+              @sandwich.ingredient_ids.include?(ingredient.id),
+              id: "ingredient_#{ingredient.id}", class: 'form-check-input' %>
+            <span class="ingredient-name"><%= ingredient.name %></span>
+            <div>
+              <%= number_field_tag "sandwich[ingredient_quantities][#{ingredient.id}]", 1, min: 1, class: 'quantity-input', size: 2 %>
+              <span class="ingredient-unit"><%= ingredient.unit_of_measure %></span>
+            </div>
+          <% end %>
+          <button data-action="click->ingredients#remove" data-ingredients-target="remove">Remove</button>
+        </li>
+      </template>
+      <% end %>
     </div>
+
 
     <div class="mb-3">
       <%= f.input :description, as: :text, label: "Sandwich Description:", input_html: { class: 'form-control', rows: 4 } %>
